first assignment sec-2

--- a/index.html
+++ b/index.html
@@ -45,26 +45,29 @@
         </button>
       </div>
 
-      <div class="right">
+      <div class="right rightone">
         <img src="Images/Romen.png" alt="Romen Restaurant" class="romen" />
       </div>
     </section>
 
     <section>
-      <div>
+      
+      <div class="left lefttwo"><img src="Images/Chair.gif" alt="" /></div>
+
+      <div class="right">
         <h2>এখন থেকে বাংলাতে বলতে চাই!!</h2>
         <h1>অভ্র মামা, গুগোল মামার খালাতো ভাই</h1>
         <p>
           আমি আসলে থ্রিডি দিয়ে লাস্ট একটা চেষ্টা করতেছিলাম জীবনে কিছু করা যায়
           কিনা, কিন্তু... কিছুদিন আগে একটা ইমেইল আমাকে আবার ডিটারমাইন করে ফেল্ল,
-          আমাদের সবার প্রিয় ঝংকার মাহবুব ভাইয়া আমাকে ইমেইল করলো লেখা যে যারা
+          আমাদের সবার প্রিয় ঝংকার মাহবুব ভাইয়া আমাকে ইমেইল করলো, লেখা যে যারা
           পূর্বে ফেইল মেরেছে তাদেরকে তিনি আরেকটা সুযোগ দিতে চাচ্ছেন। কিন্তু
           আমিতো থ্রিডিতেও কিছুটা দূরে এগিয়ে গিয়েছি তাই সিদ্ধান্ত নিলাম আগে
           যেহেতু ফাঁকি মেরেছি তাই এইবার ডবল শ্রম দেবো ৩ডি + ওয়েব ডেভ একই সাথে
           চালিয়ে যাবো। রাখে আল্লহ মারে কে? দেখি কি হয়!
         </p>
+        <button class="secondrightbtn"><a href="prosaif.com" target="_blank"><p class="secondrightp">সবেতো শুরু</p></a></button>
       </div>
-      <div></div>
     </section>
   </body>
 </html>
