--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </head>
 
   <body>
-    <section>
-      <div class="left">
+    <section class="flexable-container">
+      <div class="half-width">
         <h2>Welcome to Re-starter</h2>
         <h1>SHAIFULLAH's 3D World!</h1>
         <p>
@@ -50,11 +50,11 @@
       </div>
     </section>
 
-    <section>
+    <section class="flexable-container">
       
-      <div class="left lefttwo"><img src="Images/Chair.gif" alt="" /></div>
+      <div class="half-width lefttwo"><img src="Images/Chair.gif" alt="" /></div>
 
-      <div class="right">
+      <div class="half-width">
         <h2>এখন থেকে বাংলাতে বলতে চাই!!</h2>
         <h1>অভ্র মামা, গুগোল মামার খালাতো ভাই</h1>
         <p>
@@ -69,5 +69,10 @@
         <button class="secondrightbtn"><a href="prosaif.com" target="_blank"><p class="secondrightp">সবেতো শুরু</p></a></button>
       </div>
     </section>
+
+    <section class="thirdsec">
+<h1></h1>
+    </section>
+
   </body>
 </html>
