first assignment finished

--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
     <section class="thirdsec">
 <h1>অলরাউন্ডার</h1>
 <div class="flexable-container">
-  <div class="half-width-three"><h1>ভিডিও এডিটর</h1>
+  <div class="half-width-three" id="border-left-one"><h1>ভিডিও এডিটর</h1>
     <h2>2002 To 2006</h2>
     <p class="allp">ভিডিও এডিটর হিসাবে ইন্টার্ন করেছি একটা প্রোডাকশন হাউজে ৬ মাস, ATN Bangla এর কিছু কাজ করেছি এসিস্ট্যান্ট ভিডিও এডিটর হিসেবে। এরপর চাকুরী করেছি বাকিটা সময় একটা ইভেন্ট ম্যানেজমেন্ট ফার্মে। বেশীরভাগই বিয়ের ভিডিও এডিট করেছি যা আমার তেমন পছন্দসই কাজ ছিলো না। </p>
   </div>
-  <div class="half-width-three"><h1>ওয়েব ডেভলপার</h1>
+  <div class="half-width-three" id="border-left-two"><h1>ওয়েব ডেভলপার</h1>
   <h2>2009 To Still</h2><p class="allp">আমার অনলাইন ব্যবসা মেইনলি ফেসবুক পেইজ এর মাধ্যমে সেল করি <a href="https://www.facebook.com/BlockPrintAndBatikDress" target="_blank" class="bp">Block Print & Batik Dress</a> এটা আমার পেইজ এর লিংক। যেহেতু অনলাইন ব্যবসা তাই আগে থেকেই টুকটাক ওয়েব সাইট বানাতে পারি CMS এর মাধ্যমে, তবে ওয়েব ডেভেলপার হিসাবে এখনও কোথাও চাকুরী করুই নাই</p></div>
-  <div class="half-width-three"><h1>৩ডি আর্টিস্ট</h1>
+  <div class="half-width-three" id="border-left-three"><h1>৩ডি আর্টিস্ট</h1>
   <h2>July, 2022 To Still</h2>
 <p class="allp">মনে হচ্ছে ৩ডি-ই আমার প্যাশন কারণ এটা ভালো লাগছে বেশি। যদিও ওয়েব ডেভলপমেন্টও ভালো লাগে ভিডিও এডিটিংও ভালো লাগে তবে ৩ডিটাতে লেগে থাকতে বেশি ভালো লাগছে। তবে নতুন যে কোন জিনিসই ভালো লাগে মানুষের এই জন্যই ভালো লাগছে কিনা তা বুঝা যাবে আরও কিছু দিন গেলে</p></div>
 </div>
     </section>
-
   </body>
+  <footer>কপিরাইট সাইন কিভাবে দেয় ভুলে গেছি কিন্তু কপি করা যাবে, সমস্যা নাই</footer>
 </html>
